feat: animate slider done

--- a/index.html
+++ b/index.html
@@ -5,48 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script src="/index.js"></script>
-    <svg
-      width="184"
-      height="184"
-      viewBox="0 0 184 184"
-      version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-      style="transform: rotate(-90deg)"
-    >
-      <circle
-        r="82"
-        cx="92"
-        cy="92"
-        fill="transparent"
-        stroke="#e0e0e0"
-        stroke-width="16px"
-        stroke-dasharray="514.96px"
-        stroke-dashoffset="0"
-      ></circle>
-      <circle
-        r="82"
-        cx="92"
-        cy="92"
-        stroke="#76e5b1"
-        stroke-width="16px"
-        stroke-linecap="butt"
-        stroke-dashoffset="0px"
-        fill="transparent"
-        stroke-dasharray="514.96px"
-      ></circle>
-      <text
-        x="65px"
-        y="106px"
-        fill="#6bdba7"
-        font-size="52px"
-        font-weight="bold"
-        style="transform: rotate(90deg) translate(0px, -180px)"
-      >
-        54
-      </text>
-    </svg>
   </body>
 </html>
