--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loading Spinner etc</title>
-    <link rel="stylesheet" href="/ozonThing/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +13,6 @@
     />
   </head>
   <body>
-    <script src="/ozonThing/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
